--- a/css/style.css
+++ b/css/style.css
@@ -24,13 +24,25 @@ body{
     border-radius: 24px;
     padding: 25px;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+    position: relative;
+}
+
+.profile-card::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 36%;
+    width: 100%;
+    border-radius: 24px 24px 0 0;
+    background-color: #6441a5;
 }
 .image{
     position: relative;
     height: 150px;
     width: 150px;
     border-radius: 50%;
-    background-color: #4070f4;
+    background-color: #6441a5;
     padding: 3px;
     margin-bottom: 10px;
 }
@@ -73,7 +85,29 @@ body{
     width: 34px;
     border-radius: 50%;
     margin: 0 8px;
-    background-color: #4070f4;
+    background-color: #6441a5;
     text-decoration: none;
 
+}
+.profile-card .buttons{
+    display: flex;
+    align-items: center;
+    margin-top: 25px;
+
+}
+.buttons .button{
+    color: #fff;
+    font-size: 14px;
+    font-weight: 400;
+    border: none;
+    border-radius: 24px;
+    margin: 0 10px;
+    padding: 8px 24px;
+    background-color: #6441a5;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.buttons .button::hover{
+    background-color: #0e4bf1;
 }
